feat: Implement category color mapping and improve marker label styles

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <div class="menu-footer">
       <div class="menu-license">
         <div>Leaflet (MIT) | &copy; OpenStreetMap contributors (ODbL)</div>
-        <div>データ(CC BY): 浜松市イベント</div>
+        <div>データ(CC BY): <a href="https://opendata.pref.shizuoka.jp/dataset/12574.html" target="_blank" rel="noopener">浜松市イベント</a></div>
         <div>提供: <a href="https://opendata.pref.shizuoka.jp/" target="_blank" rel="noopener">静岡県オープンデータポータル</a> / <a href="https://www.city.hamamatsu.shizuoka.jp/opendata/index.html" target="_blank" rel="noopener">浜松市オープンデータ</a></div>
       </div>
       <div class="menu-actions">
