feat: Add search input for keyword filtering in event list

--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
     <div class="menu-actions">
       <button id="date-clear" class="menu-button" type="button">期間リセット</button>
     </div>
+    <label class="menu-label" for="search-input">キーワード検索</label>
+    <input id="search-input" class="menu-input" type="text" placeholder="例: 音楽, 公園, ワークショップ">
     <div class="menu-section">
       <div class="menu-subtitle">カテゴリ</div>
       <div id="category-filters"></div>
