--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
       <button id="menu-close" class="menu-close" type="button" aria-label="メニューを閉じる">×</button>
     </div>
     <div class="menu-catch">
+      <div><strong>ポイント</strong> 期間指定で必要なイベントだけを地図で直感的に把握できます。</div>
       <div><strong>○</strong>浜松市のイベント情報を地図で確認できます。</div>
       <div><strong>○</strong> 期間やカテゴリで絞り込むと探しやすいです。</div>
       <div><strong>○</strong> マップ上のイベントをクリックすると詳細が表示されます。</div>
